# pcl_playground

./: CMakeLists.txt  README.md
custom_software/: CMakeLists.txt
custom_software/pcds/: bag_file_info.txt
custom_software/src/: calibrate_lidars_from_model.cpp  cloud_viewer.cpp
src/: incremental_iterative_closest_point.cpp  iterative_closest_point.cpp
